RKE/RKE DinD/resources/ingress-ac110005.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: cattle-system
  labels:
    app: rancher
    app.kubernetes.io/managed-by: Helm
    chart: rancher-2.8.2
    heritage: Helm
    release: rancher
  annotations:
    cert-manager.io/issuer: rancher
    cert-manager.io/issuer-kind: Issuer
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["172.17.0.2","172.17.0.3","172.17.0.4","172.17.0.5","172.17.0.6","172.17.0.7"],"port":443,"protocol":"HTTPS","serviceName":"cattle-system:rancher","ingressName":"cattle-system:rancher","hostname":"rancher.ac110005.nip.io","path":"/","allNodes":false}]
    meta.helm.sh/release-name: rancher
    meta.helm.sh/release-namespace: cattle-system
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
  selfLink: /apis/networking.k8s.io/v1/namespaces/cattle-system/ingresses/rancher
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rancher.ac110005.nip.io
      secretName: tls-rancher-ingress
  rules:
    - host: rancher.ac110005.nip.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: rancher
                port:
                  number: 80
